--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -49,4 +49,8 @@ dependencies {
     compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.3'
     compile 'org.sufficientlysecure:html-textview:3.5'
     compile 'com.zzhoujay.richtext:richtext:3.0.4'
+    compile 'com.google.zxing:core:3.3.0'
+    compile 'com.mylhyl:commonrefreshlayout:2.4'
+    compile 'com.mylhyl:cygadapter:1.1.0'
+    compile 'com.alibaba:fastjson:1.1.52.android'
 }
